# uav_gas_sensor_system

./: Comparison.m  README.md  circle sweeping of single.fig  circle sweeping of two drones.fig  createFit.m  error_calculate_differentHz_circle.m  error_calculate_differentdrones.m  error_calculate_differentmodes.m  error_calculate_onedrone.m  error_plot_differentdronenumbers.m  gas #1 concentration sampling by two drones.fig  gas #1 fitting map by two drones.fig  gas #1-3 concentrations sampling by two drones.fig  gas #2 concentration sampling by two drones.fig  gas #2 fitting map by two drones.fig  gas #3 concentration sampling by two drones.fig  gas #3 fitting map by two drones.fig  gas1_distribution.fig  gas_distribution_fitting.sfit  mower sweeping of single.fig  multigas_distribution_plot.m  multiple_ellipse_plot.m  readP3PPoseFrombag.m  readfrombag.m  readfrombag_MultiGases.m  readfrombag_MultiGasesMultidrones.m  readfrombag_OnegasFivedrones.m  readfrombag_OnegasTridrones.m  readme.md
gas_sensor_gazebo_plugins/: CMakeLists.txt  package.xml
gas_sensor_gazebo_plugins/include/gas_sensor_gazebo_plugins/: gazebo_gassensor_ext_plugin.h  gazebo_gassensor_plugin.h  gazebo_gassource_plugin.h
gas_sensor_gazebo_plugins/src/: gazebo_gassensor_ext_plugin.cpp  gazebo_gassensor_plugin.cpp  gazebo_gassource_plugin.cpp
uav_trajectory_update/trajectory_update/: CMakeLists.txt
uav_trajectory_update/trajectory_update/include/trajectory_update/: trajectory.h
uav_trajectory_update/trajectory_update_node/: CMakeLists.txt  package.xml
uav_trajectory_update/trajectory_update_node/include/mav_trajectory_generation_ros/: trajectory_replanning_master_for_five_drones_vector.h  trajectory_replanning_master_for_three_drones.h  trajectory_replanning_master_for_three_drones_vector.h  trajectory_replanning_timeupdate.h  trajectory_replanning_timeupdate_for_two_sides.h  trajectory_sampler_node.h
uav_trajectory_update/trajectory_update_node/src/: trajectory_replanning_master_for_five_drones_vector.cpp  trajectory_replanning_master_for_three_drones.cpp  trajectory_replanning_master_for_three_drones_vector.cpp  trajectory_replanning_timeupdate.cpp  trajectory_replanning_timeupdate_bak.cpp  trajectory_replanning_timeupdate_for_two_sides.cpp  trajectory_sampler_node.cpp
